Tests is worked. Added min version. 0.7.1

--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Combine Navigation Test</title>
-    <script src="../jquery-1.7.2.js"></script>
-    <script src="../jquery.caret.js"></script>
+    <script src="jquery-1.7.2.js"></script>
+    <script src="jquery.caret.1.02.js"></script>
     <script src="../jquery.groupinputs.js"></script>
     <script src="qunit/qunit/qunit.js"></script>
     <link rel="stylesheet" href="qunit/qunit/qunit.css">
