--- a/test/index.html
+++ b/test/index.html
@@ -61,6 +61,13 @@
 
         <input type="text" value="" maxlength="4" class="input12">
         <input type="text" value="" maxlength="4" class="input12">
+
+        <input type="text" value="" maxlength="4" class="input-onchange1">
+        <input type="text" value="" maxlength="4" class="input-onchange1">
+
+        <input type="text" value="" maxlength="4" class="input-onchange2">
+        <input type="text" value="" maxlength="4" class="input-onchange2">
+        <input type="text" value="" maxlength="4" class="input-onchange2">
     </div>
     <script src="unit.js"></script>
 </body>
