--- a/test/index.html
+++ b/test/index.html
@@ -24,8 +24,8 @@
     </script>
     <script src="jquery.caret.1.02.js"></script>
     <script src="../jquery.groupinputs.js"></script>
-    <script src="qunit/qunit/qunit.js"></script>
-    <link rel="stylesheet" href="qunit/qunit/qunit.css">
+    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
     <div id="qunit"></div>
